tests/ui/span/issue-71363.stderr
error[E0277]: `MyError` doesn't implement `std::fmt::Display`
 --> $DIR/issue-71363.rs:4:28
  |
4 | impl std::error::Error for MyError {}
  |                            ^^^^^^^ unsatisfied trait bound
  |
help: the trait `std::fmt::Display` is not implemented for `MyError`
 --> $DIR/issue-71363.rs:3:1
  |
3 | struct MyError;
  | ^^^^^^^^^^^^^^
note: required by a bound in `std::error::Error`
 --> $SRC_DIR/core/src/error.rs:LL:COL

error[E0277]: `MyError` doesn't implement `Debug`
 --> $DIR/issue-71363.rs:4:28
  |
4 | impl std::error::Error for MyError {}
  |                            ^^^^^^^ the trait `Debug` is not implemented for `MyError`
  |
  = note: add `#[derive(Debug)]` to `MyError` or manually `impl Debug for MyError`
note: required by a bound in `std::error::Error`
 --> $SRC_DIR/core/src/error.rs:LL:COL
help: consider annotating `MyError` with `#[derive(Debug)]`
  |
3 + #[derive(Debug)]
4 | struct MyError;
  |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
